@@ -13,12 +13,13 @@ fi
 
 depmod $version
 
-if [ -z "$2" ]; then
+if [ -f /lib/modules/$version/.fresh-install ]; then
     change=install
 else
     change=upgrade
 fi
 linux-update-symlinks $change $version $image_path
+rm -f /lib/modules/$version/.fresh-install
 
 if [ -d /etc/kernel/postinst.d ]; then
     DEB_MAINT_PARAMS="$*" run-parts --report --exit-on-error --arg=$version \
