@@ -3,6 +3,8 @@
 version=@abiname@@localversion@
 image_path=/boot/@image-stem@-$version
 
+rm -f /lib/modules/$version/.fresh-install
+
 if [ "$1" != upgrade ] && command -v linux-update-symlinks >/dev/null; then
     linux-update-symlinks remove $version $image_path
 fi
