@@ -7,6 +7,8 @@ linux (4.6-1~exp3) UNRELEASED; urgency=medium
     for  minimal_swap, no_symlinks, use_hard_links and *_hook parameters in
     /etc/kernel-img.conf (Closes: #730073).
   * linux-image: postrm: Update default symlinks before running hook scripts
+  * linux-image: Make a newly installed kernel the default if the package
+    was previously removed
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sat, 04 Jun 2016 18:33:11 +0100
 
